# dataguzzler-python

./: .gitignore  Makefile  README.md  README.txt  TODO.txt  pyproject.toml  setup.py
.github/workflows/: push-to-public.yml  push-to-pypi.yml
dataguzzler_python/: NOTES.txt  OpaqueWrapper.py  Qt.dpi  Qt.py  Qt5Wrapper.py  QtWrapper.py  __init__.py  async_conn.py  censoring.py  configfile.py  conn.py  context.py  dg_internal.pxd  dgold.c  dgold.h  dgold.pyx  dgold_locking_c.c  dgold_module_c.c  dgold_rpc_c.c  dgpy.py  gpib.dpi  main_thread.py  mainloop.py  matplotlib.dpi  motion_controller.py  pydg.py  remoteproxy.py  savewfm.c  savewfm.pyx  serial.dpi  serial.py  serial_device.dpi  subproc.py  visa.dpi  wfmstore.pxd
dataguzzler_python/modules/: dmx_usb_pro.py
dataguzzler_python/modules/motion_control/: acr9000.py
dataguzzler_python/modules/xray_detectors/: dexela_2923.py
demos/: CTscanner.dgp  CTscanner.py  CTscannerdbg.py  XRayCT_example.dgp  XRayCT_example.py  acr9000.dgp  ande_viewer.dgp  configdemo.dgp  configdemo.py  configdemo_dgold.dgp  configdemo_dgold.py  dgpy_startup.dpi  dmx_lighting_demo.dgp  dummydata.dgp  dummydata.py  gpib_demo.dgp  matplotlibdemo.dgp  nde_viewer.dgp  pint.dpi  plotting.dpi  pololu_rs232servocontroller.py  recording_db.dgp  servoshutter.py  shutter_demo.dgp  shutter_demo_subproc.dgp  simple_qt.dgp  subprocdemo.dgp  tek_scope.dgp
doc/source/: about.rst  configs.rst  installation.rst  modules.rst  quickstart.rst
motion_control/: acr9000.dgp  acr9000.py
