[project]
name = 'dataguzzler-python'
dynamic = ['version','authors','description','urls']
requires-python = ">= 3.8"
readme = "README.md"
classifiers = [
	    "Development Status :: 3 - Alpha",
	    "License :: OSI Approved :: BSD License"
	    ]

[project.scripts]
dataguzzler-python = "dataguzzler_python.bin.dataguzzler_python:main"

[build-system]
requires = ["setuptools","numpy"]
build-backend = "setuptools.build_meta:__legacy__"
